--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "run": "node app.js"
+    "run": "node app.js",
+    "seed": "node models/seeds/userSeeder.js"
   },
   "keywords": [],
   "author": "",
